Fix rounded slideshow on safari.

--- a/wp-content/themes/sparkart/css/src/slider.scss
+++ b/wp-content/themes/sparkart/css/src/slider.scss
@@ -19,4 +19,8 @@
 	border-top-right-radius: 500px;
 	border-bottom-right-radius: 500px;
 	overflow: hidden;
+	-webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0)
 }
