--- a/wp-content/themes/sparkart/css/src/sparkart-extend.scss
+++ b/wp-content/themes/sparkart/css/src/sparkart-extend.scss
@@ -118,6 +118,10 @@ html {
   border-top-right-radius: 1000px;
   border-bottom-right-radius: 1000px;
   overflow: hidden;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0)
 }
 .floating-cta--video {
   position: absolute;
